# rust-daemonize-simple

./: Cargo.toml
src/: lib.rs  not_unix.rs  unix.rs
