[package]
name = "daemonize-simple"
version = "0.1.4"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A simple crate to run an app as a Unix daemon"
license = "MIT"
homepage = "https://github.com/jedisct1/rust-daemonize-simple"
repository = "https://github.com/jedisct1/rust-daemonize-simple"

[dependencies]
libc = "0.2"
